[package]
name = "nym-explorer"
version = "0.10.0"
authors = ["dave <futurechimp@users.noreply.github.com>", "Jedrzej Stuczynski <andrew@nymtech.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
# no point in importing entire futures crate
futures-util = "0.3"
log = "0.4"
reqwest = "0.11"
rocket = "0.4"
rocket_contrib = "0.4"
tokio = { version = "1.4", features = ["net", "rt-multi-thread", "macros"] }
tokio-tungstenite = {version = "0.14", features = ["native-tls"] }
tokio-stream = { version = "0.1", features = [ "sync" ] }