[package]
name = "foomp"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
readme.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
anyhow.workspace = true
nym-http-api-client = { path = "../common/http-api-client" }
nym-validator-client = { path = "../common/client-libs/validator-client", features = ["http-client"] }


[lints]
workspace = true
