# Copyright 2020 - Nym Technologies SA <contact@nymtech.net>
# SPDX-License-Identifier: GPL-3.0-only

[package]
name = "nym-gateway"
license = "GPL-3.0"
version = "1.1.36"
authors = [
    "Dave Hrycyszyn <futurechimp@users.noreply.github.com>",
    "Jędrzej Stuczyński <andrew@nymtech.net>",
]
description = "Implementation of the Nym Mixnet Gateway"
edition = "2021"
rust-version = "1.85"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
bincode = { workspace = true }
async-trait = { workspace = true }
bip39 = { workspace = true }
bs58 = { workspace = true }
dashmap = { workspace = true }
fastrand = { workspace = true }
futures = { workspace = true }
humantime-serde = { workspace = true }
ipnetwork = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "net",
    "signal",
    "fs",
    "time",
] }
tokio-stream = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
url = { workspace = true, features = ["serde"] }
zeroize = { workspace = true }


# internal
nym-credentials = { workspace = true }
nym-credentials-interface = { workspace = true }
nym-credential-verification = { workspace = true }
nym-crypto = { workspace = true, features = ["sphinx"] }
nym-config = { workspace = true }
nym-gateway-storage = { workspace = true }
nym-gateway-stats-storage = { workspace = true }
nym-gateway-requests = { workspace = true }
nym-mixnet-client = { workspace = true }
nym-network-defaults = { workspace = true }
nym-network-requester = { path = "../service-providers/network-requester" }
nym-sdk = { workspace = true }
nym-sphinx = { workspace = true }
nym-statistics-common = { workspace = true }
nym-task = { workspace = true }
nym-topology = { workspace = true }
nym-validator-client = { workspace = true }
nym-ip-packet-router = { path = "../service-providers/ip-packet-router" }
nym-node-metrics = { workspace = true }
nym-upgrade-mode-check = { workspace = true }
nym-metrics = { workspace = true }

nym-wireguard = { workspace = true }
nym-wireguard-private-metadata-server = { workspace = true }
nym-wireguard-types = { workspace = true }

nym-authenticator-requests = { workspace = true }
nym-client-core = { workspace = true, features = ["cli"] }
nym-id = { workspace = true }
nym-service-provider-requests-common = { workspace = true }

# LP dependencies
nym-lp = { path = "../common/nym-lp" }
nym-lp-transport = { path = "../common/nym-lp-transport" }
nym-kcp = { path = "../common/nym-kcp" }
nym-registration-common = { path = "../common/registration" }
bytes = { workspace = true }

defguard_wireguard_rs = { workspace = true }

[dev-dependencies]
nym-gateway-storage = { workspace = true, features = ["mock"] }
nym-wireguard = { workspace = true, features = ["mock"] }
mock_instant = "0.6.0"
time = { workspace = true }

[lints]
workspace = true
