# Copyright 2020 - Nym Technologies SA <contact@nymtech.net>
# SPDX-License-Identifier: Apache-2.0

[package]
name = "nym-mixnode"
version = "1.0.0-rc.2"
authors = [
    "Dave Hrycyszyn <futurechimp@users.noreply.github.com>",
    "Jędrzej Stuczyński <andrew@nymtech.net>",
    "Drazen Urch <durch@users.noreply.github.com>",
]
description = "Implementation of a Loopix-based Mixnode"
edition = "2021"
rust-version = "1.58.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bs58 = "0.4.0"
clap = { version = "3.0.10", features = ["cargo", "derive"] }
colored = "2.0"
dirs = "3.0"
dotenv = "0.15.0"
futures = "0.3.0"
humantime-serde = "1.0"
log = "0.4.0"
pretty_env_logger = "0.4.0"
rand = "0.7.3"
rocket = { version="0.5.0-rc.1", features = ["json"] }
serde = { version="1.0", features = ["derive"] }
tokio = { version="1.8", features = ["rt-multi-thread", "net", "signal"] }
tokio-util = { version="0.6.7", features = ["codec"] }
toml = "0.5.8"
url = { version = "2.2", features = ["serde"] }
lazy_static = "1.4.0"
anyhow = "1.0.40"

## internal
config = { path="../common/config" }
crypto = { path="../common/crypto" }
mixnet-client = { path="../common/client-libs/mixnet-client" }
mixnode-common = { path="../common/mixnode-common" }
nonexhaustive-delayqueue = { path="../common/nonexhaustive-delayqueue" }
nymsphinx = { path="../common/nymsphinx" }
pemstore = { path="../common/pemstore" }
topology = { path="../common/topology" }
validator-client = { path="../common/client-libs/validator-client" }
version-checker = { path="../common/version-checker" }

[dev-dependencies]
serial_test = "0.5"
tokio = { version="1.8", features = ["rt-multi-thread", "net", "signal", "test-util"] }

nymsphinx-types = { path = "../common/nymsphinx/types" }
nymsphinx-params = { path = "../common/nymsphinx/params" }

[build-dependencies]
vergen = { version = "5", default-features = false, features = ["build", "git", "rustc", "cargo"] }
