[package]
name = "mixtcp"
version = "0.0.1"
edition = "2021"
license.workspace = true

[dependencies]
smoltcp = { workspace = true, default-features = false, features = [
    "std",
    "medium-ip",
    "proto-ipv4",
    "proto-ipv6",
    "socket-tcp",
    "socket-icmp",
] }
tokio = { workspace = true }
tracing = { workspace = true }
nym-sdk = { path = "../sdk/rust/nym-sdk" }
nym-ip-packet-requests = { path = "../common/ip-packet-requests" }
thiserror.workspace = true

[dev-dependencies]
bytes = { workspace = true }
reqwest.workspace = true
webpki-roots.workspace = true
rustls = { workspace = true }
nym-bin-common = { path = "../common/bin-common", features = ["basic_tracing"] }
