[package]
name = "nym-network-monitor"
version = "0.9.0"
authors = ["Dave Hrycyszyn <futurechimp@users.noreply.github.com>", "Jędrzej Stuczyński <andrew@nymtech.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
dotenv = "0.15.0"
futures = "0.3"
log = "0.4"
pretty_env_logger = "0.3"
rand = "0.7"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "0.2", features = ["signal", "rt-threaded", "macros"] }

## internal
crypto = { path = "../common/crypto" }
gateway-client = { path = "../common/client-libs/gateway-client" }
nymsphinx = { path = "../common/nymsphinx" }
topology = { path = "../common/topology" }
validator-client = { path = "../common/client-libs/validator-client" }
version-checker = { path = "../common/version-checker" }

[dev-dependencies]
