# Copyright 2020 - Nym Technologies SA <contact@nymtech.net>
# SPDX-License-Identifier: GPL-3.0-only

[package]
name = "nym-api"
license = "GPL-3.0"
version.workspace = true
authors.workspace = true
edition = "2021"
rust-version.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
bs58 = { workspace = true }
bip39 = { workspace = true }
bincode.workspace = true
console-subscriber = { workspace = true, optional = true } # nym-api needs to be built with RUSTFLAGS="--cfg tokio_unstable"
cfg-if = { workspace = true }
clap = { workspace = true, features = ["cargo", "derive", "env"] }
dashmap = { workspace = true }
futures = { workspace = true }
humantime-serde = { workspace = true }
moka = { workspace = true }
pin-project = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, features = ["serde-human-readable", "parsing"] }
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
    "signal",
    "time",
] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
url = { workspace = true }

tendermint = { workspace = true }
ts-rs = { workspace = true, optional = true }

anyhow = { workspace = true }

sqlx = { workspace = true, features = [
    "runtime-tokio-rustls",
    "sqlite",
    "macros",
    "migrate",
    "time",
] }

schemars = { workspace = true, features = ["preserve_order"] }
zeroize = { workspace = true }

# for axum server
axum = { workspace = true, features = ["tokio"] }
tower-http = { workspace = true, features = ["cors", "trace", "compression-br", "compression-deflate", "compression-gzip", "compression-zstd"] }
utoipa = { workspace = true, features = ["axum_extras", "time"] }
utoipauto = { workspace = true }
utoipa-swagger-ui = { workspace = true, features = ["axum"] }
tracing = { workspace = true }

## internal
nym-cache = { workspace = true }
nym-bandwidth-controller = { workspace = true }
nym-ecash-contract-common = { workspace = true }
nym-ecash-time = { workspace = true, features = ["expiration"] }
nym-coconut-dkg-common = { workspace = true }
nym-compact-ecash = { workspace = true }
nym-credentials-interface = { workspace = true }
nym-config = { workspace = true }
cosmwasm-std = { workspace = true }
nym-credential-storage = { workspace = true, features = [
    "persistent-storage",
] }
nym-credentials = { workspace = true }
nym-crypto = { workspace = true }
cw2 = { workspace = true }
cw3 = { workspace = true }
cw4 = { workspace = true }
nym-dkg = { workspace = true, features = ["cw-types"] }
nym-gateway-client = { workspace = true }
nym-mixnet-contract-common = { workspace = true, features = ["utoipa"] }
nym-contracts-common = { workspace = true, features = ["naive_float", "utoipa"] }
nym-sphinx = { workspace = true }
nym-pemstore = { workspace = true }
nym-task = { workspace = true }
nym-topology = { workspace = true }
nym-api-requests = { workspace = true }
nym-validator-client = { workspace = true }
nym-http-api-client = { workspace = true }
nym-bin-common = { workspace = true, features = ["output_format", "openapi", "basic_tracing"] }
nym-node-tester-utils = { workspace = true }
nym-node-requests = { workspace = true, features = ["client"] }
nym-types = { workspace = true }
nym-http-api-common = { workspace = true, features = ["utoipa", "output", "middleware"] }
nym-serde-helpers = { workspace = true, features = ["date"] }
nym-ticketbooks-merkle = { workspace = true }
nym-statistics-common = { workspace = true }
nym-ecash-signer-check = { workspace = true }


[features]
no-reward = []
v2-performance = []
generate-ts = ["ts-rs"]

[build-dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
sqlx = { workspace = true, features = [
    "runtime-tokio-rustls",
    "sqlite",
    "macros",
    "migrate",
] }

[dev-dependencies]
axum-test = { workspace = true }
tempfile = { workspace = true }
cw3 = { workspace = true }
cw-utils = { workspace = true }
rand_chacha = { workspace = true }
sha2 = { workspace = true }
dotenvy = { workspace = true }
test-with = { workspace = true, default-features = false }

[lints]
workspace = true
