[package]
name = "nym-authenticator-client"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
bincode.workspace = true
futures.workspace = true
semver.workspace = true
thiserror.workspace = true
tokio-util.workspace = true
tokio.workspace = true
tracing.workspace = true

nym-authenticator-requests = { workspace = true }
nym-bandwidth-controller = { workspace = true }
nym-credentials-interface = { workspace = true }
nym-crypto = { workspace = true }
nym-registration-common = { workspace = true }
nym-sdk = { workspace = true }
nym-service-provider-requests-common = { workspace = true }
nym-validator-client = { workspace = true }
nym-wireguard-types = { workspace = true }
